Добавляє вирівнювання іконок на контактах

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,8 @@ ul {
 }
 
 .header-contact {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 
