--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,6 @@ ul {
 
 /* шапка */
 .header {
-  width: 1600px;
   margin-right: auto;
   margin-left: auto;
   border-bottom: 1px solid var(--border-color);
@@ -169,7 +168,6 @@ ul {
 
 /* Подвал */
 .footer {
-  width: 1600px;
   margin-right: auto;
   margin-left: auto;
   padding-top: 60px;
@@ -180,6 +178,7 @@ ul {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-logo {
@@ -208,7 +207,6 @@ ul {
 
 .footer-social-box {
   width: 206px;
-  margin-top: 12px;
   margin-left: 70px;
 }
 
@@ -254,7 +252,7 @@ ul {
 
 /* Герой */
 .hero {
-  width: 1600px;
+  max-width: 1600px;
   height: 600px;
   margin-right: auto;
   margin-left: auto;
@@ -384,7 +382,6 @@ ul {
 
 /* Сотрудники */
 .team {
-  width: 1600px;
   margin-right: auto;
   margin-left: auto;
 
@@ -421,10 +418,14 @@ ul {
 
 .team-description {
   padding-top: 30px;
+  padding-right: 32px;
   padding-bottom: 30px;
+  padding-left: 32px;
 }
 
 .team-name {
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -434,7 +435,6 @@ ul {
 }
 
 .team-text {
-  margin-top: 10px;
   margin-bottom: 16px;
 
   color: var(--primary-text-color);
@@ -578,7 +578,8 @@ ul {
   margin-top: 30px;
 }
 
-.projects-item:hover {
+.projects-item:hover,
+.projects-item:focus-within {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
